RESOLVED FIXED159972
Media controls don't appear when pausing a small autoplaying video
https://bugs.webkit.org/show_bug.cgi?id=159972
Summary Media controls don't appear when pausing a small autoplaying video
Wenson Hsieh
Reported 2016-07-20 08:33:15 PDT
Media controls don't appear when pausing a small autoplaying video
Attachments
Patch (1.50 KB, patch)
2016-07-20 08:44 PDT, Wenson Hsieh
no flags
Patch (12.69 KB, patch)
2016-07-20 11:26 PDT, Wenson Hsieh
no flags
Patch (12.93 KB, patch)
2016-07-20 11:53 PDT, Wenson Hsieh
no flags
Patch for landing (12.92 KB, patch)
2016-07-20 12:05 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2016-07-20 08:33:53 PDT
Wenson Hsieh
Comment 2 2016-07-20 08:44:01 PDT
Wenson Hsieh
Comment 3 2016-07-20 11:26:32 PDT
Wenson Hsieh
Comment 4 2016-07-20 11:53:05 PDT
WebKit Commit Bot
Comment 5 2016-07-20 11:54:48 PDT
Comment on attachment 284136 [details] Patch Rejecting attachment 284136 [details] from review queue. wenson_hsieh@apple.com does not have reviewer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/contributors.json. - If you do not have reviewer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/contributors.json by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
Wenson Hsieh
Comment 6 2016-07-20 12:05:30 PDT
Created attachment 284137 [details] Patch for landing
WebKit Commit Bot
Comment 7 2016-07-20 12:26:13 PDT
Comment on attachment 284137 [details] Patch for landing Clearing flags on attachment: 284137 Committed r203464: <http://trac.webkit.org/changeset/203464>
WebKit Commit Bot
Comment 8 2016-07-20 12:26:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.